--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,16 @@
     <string name="NF_enter_query">E.g. 1 small apple and 100g of rice</string>
     <string name="submit_query">Submit</string>
     <string name="clear_query">Clear</string>
-    <string name="results_placeholder">Results will appear here</string>
-    <!-- API Keys -->
+    <string name="error_no_connection">Unable to connect - please check internet connection</string>
+    <string name="error_bad_query">Check spelling, use \'AND\' for separation and specify ingredient quantities</string>
+    <string name="header_qty">Qty</string>
+    <string name="header_unit">Measure</string>
+    <string name="header_food">Food</string>
+    <string name="header_weight">Weight</string>
+    <string name="header_calories">Calories</string>
+    <string name="not_available">N/A</string>
+
+    <!-- NUtrition Analysis API Keys -->
     <string name="edamam_app_id">4a280b81</string>
     <string name="edamam_app_key">2c8e691ecb602a2181cb241a346cea45</string>
 </resources>
