--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">VitAI</string>
-    <string name="NF_enter_query">E.g. 1 small apple and 100g of rice</string>
+    <string name="NF_enter_query">A cup of broccoli and 2 bananas</string>
     <string name="submit_query">Submit</string>
     <string name="clear_query">Clear</string>
     <string name="error_no_connection">Unable to connect - please check internet connection</string>
@@ -10,7 +10,7 @@
     <string name="header_food">Food</string>
     <string name="header_weight">Weight</string>
     <string name="header_calories">Calories</string>
-    <string name="not_available">N/A</string>
+    <string name="mic_description">Activate speech to text</string>
 
     <!-- NUtrition Analysis API Keys -->
     <string name="edamam_app_id">4a280b81</string>
