--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">VitAI</string>
-    <string name="NF_enter_query">A cup of broccoli and 2 bananas</string>
+    <string name="NF_enter_query">e.g. A cup of broccoli and 2 bananas</string>
     <string name="submit_query">Submit</string>
     <string name="clear_query">Clear</string>
     <string name="error_no_connection">Unable to connect - please check internet connection</string>
